fixed spacing

--- a/frontend/src/css/GettingStarted.css
+++ b/frontend/src/css/GettingStarted.css
@@ -77,7 +77,7 @@
   padding: .8vh 2vh; 
   cursor: pointer; 
 
-  margin-top: 4vh;
+  margin-top: 4px;
   font-family: 'Radley';
   padding: 10px 20px;
   font-size: 2.8vh;
